# smartcar

./: CMakeLists.txt  README.md
lib/: camera.h  search.h
src/: cameratest.cpp  main.cpp  search.cpp  zaber_detector.cpp
